# gefyra

./: .gitignore  .gitlint  .pre-commit-config.yaml  FUNDING.yml  README.md  RELEASE.md  completion.bash  install.sh  michael.json  pyproject.toml  setup.cfg  sonar-project.properties  version.py
carrier2/: Cargo.toml  Dockerfile  README.md  client-key.pem  conf.yaml  config.yaml  entrypoint.sh  gefyra_bridges.yaml  pyproject.toml
carrier2/benches/: fixtures.rs  gefyra.rs
carrier2/etc/: inittab
carrier2/src/: lib.rs  main.rs  matching.rs
carrier2/tests/: conftest.py
carrier2/tests/bintest/: test_execution.py  test_local_execution.py
carrier2/tests/fixtures/: carrier2_pod.yaml  default_upstream.yaml  default_upstream_tls.yaml  demo_pods.yaml  dev.yaml  one_peer.yaml  test_ca.pem  test_cert.pem  test_key.pem  three_peers_tls.yaml
carrier2/tests/integration/: conftest.py  test_run.py  utils.py
client/: README.md  __main__.py  c.json  create_ireq.py  mich.json  mycluster.yaml  pyoxidizer.bzl  pyproject.toml  version.py
client/cli/: bridge.py  docker_network.py  resources.py  utils.py
client/cli/cargo/: Dockerfile
client/cluster/: resources.py  uninstall_operator.py
client/docker_tools/: create_network.py  remove_network.py
client/gefyra/: __main__.py  configuration.py  exceptions.py  types.py
client/gefyra/api/: __init__.py  bridge.py  clients.py  connect.py  down.py  duplicate.py  install.py  list.py  mount.py  operator.py  reflect.py  reverse.py  rm.py  run.py  status.py  up.py  utils.py
client/gefyra/cli/: __main__.py  adm.py  bridge.py  clients.py  connect.py  connections.py  console.py  context.py  docgen.py  duplicate.py  install.py  installation.py  list.py  main.py  mount.py  operator.py  reverse.py  rm.py  run.py  self.py  status.py  telemetry.py  updown.py  utils.py  version.py
client/gefyra/cluster/: manager.py  resources.py  utils.py
client/gefyra/local/: __init__.py  bridge.py  cargo.py  check.py  clients.py  minikube.py  mount.py  networking.py  telemetry.py  utils.py
client/gefyra/misc/: install.py  uninstall.py  utils.py
client/gefyra/types/: __init__.py  bridge.py  bridge_mount.py  client.py  container.py  install.py  stowaway.py
client/operator/: install_operator.py  resources.py  uninstall_operator.py
client/tests/: base.py  conftest.py  factories.py  load_test.py  test_cli_utils.py  test_create_network.py  test_k3d.py  test_port_parser.py  test_telemetry.py  test_up_args.py
client/tests/e2e/: base.py  conftest.py  const.py  mixin.py  test_bridge.py  test_client_file_manipulations.py  test_clients.py  test_clients_with_custom_registry.py  test_cluster_utils.py  test_k3d.py  test_mount.py
client/tests/fixtures/: demo_pods.yaml  env_pods.yaml  nginx.yaml  nginx_exposed.yaml  operator.yaml  operator_no_sa.yaml
client/tests/loadtest/: README.md  __main__.py  helpers.py  k3d-containerd-config.toml.tmpl  loadtest.py
client/tests/unit/: test_bridge_body.py  test_bridge_delete.py  test_bridge_mount_body.py  test_cli_client_creation.py  test_cli_utils.py  test_client_cli.py  test_client_config.py  test_client_file_manipulations.py  test_clients.py  test_clients_with_custom_registry.py  test_cluster_utils.py  test_connect.py  test_connection_list_inspect.py  test_connection_utils.py  test_create_network.py  test_extra_container_args.py  test_file_from.py  test_minikube_utils.py  test_mount_operations.py  test_operator_install.py  test_port_parser.py  test_restore_bridges.py  test_rm.py  test_status.py  test_subnet_negotiation.py  test_telemetry.py  test_tls_secret_notation.py  test_uninstall.py  test_up_args.py  test_version_command.py
gefyra/: README.md  __main__.py  configuration.py  create_ireq.py  pyproject.toml
gefyra/api/: __init__.py  bridge.py  down.py  run.py  up.py  utils.py
gefyra/cluster/: manager.py  resources.py  utils.py
gefyra/local/: bridge.py  cargo.py  check.py  networking.py  utils.py
gefyra/local/cargo/: Dockerfile  route_setting.sh
gefyra/operator/: install_operator.py  uninstall_operator.py
operator/: .coveragerc  Dockerfile  README.md  main.py  mycluster.yaml  pyproject.toml  san.cnf
operator/gefyra/: base.py  bridge_mount_state.py  bridgemountstate.py  bridgestate.py  carrier.py  clientstate.py  configuration.py  exceptions.py  healthcheck.py  purge.py  shadowstate.py  stowaway.py  utils.py
operator/gefyra/bridge/: abstract.py  exceptions.py  factory.py
operator/gefyra/bridge_mount/: abstract.py  duplicate.py  exceptions.py  factory.py  utils.py
operator/gefyra/bridgemount/: abstract.py  duplicate.py  factory.py
operator/gefyra/connection/: abstract.py  factory.py
operator/gefyra/handler/: __init__.py  bridge_mounts.py  bridges.py  cleanup.py  clients.py  components.py  configure.py  configure_operator.py  configure_webhook.py  interceptrequests.py  startup.py  validation.py
operator/gefyra/resources/: configmaps.py  crds.py  deployments.py  events.py  secrets.py  serviceaccounts.py  services.py
operator/gefyra/shadow/: abstract.py  duplicate.py  factory.py
operator/operator/: carrier.py  purge.py  stowaway.py  utils.py
operator/operator/handler/: cleanup.py  components.py  interceptrequests.py
operator/operator/resources/: configmaps.py  crds.py  deployments.py  secrets.py  services.py
operator/resources/: deployments.py
operator/tests/: README.md  conftest.py  factories.py  k3d_cluster.yaml  kind_cluster.yaml  utils.py
operator/tests/e2e/: conftest.py  test_connect_clients.py  test_create_bridge.py  test_expire_clients.py  test_run_operator.py  utils.py
operator/tests/fixtures/: a_gefyra_bridge.yaml  a_gefyra_bridge_carrier2.yaml  a_gefyra_bridge_carrier2_demo.yaml  a_gefyra_bridge_carrier2_port.yaml  a_gefyra_bridge_failing.yaml  a_gefyra_client.yaml  b_gefyra_bridge_carrier2.yaml  b_gefyra_client.yaml  bridge_mount.yaml  bridge_mount_demo.yaml  bridge_mount_pod.yaml  bridge_mount_sts.yaml  bridge_mount_tls.yaml  demo_backend_tls_probes.yaml  demo_pods.yaml  demo_pods_not_supported.yaml  nginx.yaml  nginx_delay.yaml  nginx_hpa.yaml  nginx_multiport.yaml  (+6 more)
(+227 files in other folders)
