[package]
name = "carrier2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
env_logger = "0.11.10"
http = "1.4.1"
log = "0.4.31"
pingora = { version = "0.8.0", features = ["lb", "boringssl"] }
regex = "1.11.1"
serde = "1.0.218"
serde_yaml = "0.9.34"
uuid = { version  = "1.23.2", features = ["v4"] }

[dev-dependencies]
criterion = "0.8.2"


[[bench]]
name = "gefyra"
harness = false
