[tool.poetry]
name = "carrier2"
version = "0.1.0"
description = ""
authors = ["Michael Schilonka <michael@blueshoe.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.14"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-kubernetes = "^0.6.0"
requests = "^2.32.3"
kubernetes = "^32.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
