[tool.poetry]
name = "Gefyra"
version = "2.0.0-alpha"
description = "Gefyra runs all developer machine side components of Gefyra's Kubernetes-based development infrastructure"
authors = ["Michael Schilonka <michael@blueshoe.io>"]
readme = "README.md"
homepage = "https://gefyra.dev"
repository = "https://github.com/gefyrahq/gefyra"
documentation = "https://gefyra.dev"
keywords = [
    "Kubernetes",
    "Development",
    "Cloud-native"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
kubernetes = ">=24.2,<27.0"
docker = "^6.0.0"

[tool.poetry.group.cli.dependencies]
cli-tracker = ">=0.2.7,<0.4.0"
tabulate = ">=0.8.10,<0.10.0"
prompt-toolkit = "^3.0.38"

[tool.poetry.group.dev.dependencies]
flake8-bugbear = "^23.3.12"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
pytest = "^7.2.2"
coverage = {extras = ["toml"], version = "^6.5.0"}
coveralls = "^3.3.1"
pytest-kubernetes = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gefyra = "gefyra.__main__:main"
g = "gefyra.cli.__main__:main"
setversion = "version:set_version"

[tool.poetry.urls]
issues = "https://github.com/gefyrahq/gefyra/issues"

[tool.coverage.run]
branch = true
source = ["gefyra"]