[tool.poetry]
name = "Gefyra Client"
version = "0.1.0"
description = "Gefyra Client runs all developer machine side components of Gefyra's Kubernetes-based development system"
authors = ["Michael Schilonka <michael@blueshoe.de>"]

[tool.poetry.dependencies]
python = "^3.8"
kubernetes = "^19.15.0"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
