[tool.poetry]
name = "Gefyra Operator"
version = "2.2.2"
description = "Gefyra Operator runs all cluster-side components of Gefyra's Kubernetes-based development system"
authors = ["Michael Schilonka <michael@blueshoe.io>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
kopf = "^1.37.2"
kubernetes = "^30.1.0"
python-decouple = "^3.8"
python-statemachine = "^2.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-black = "^0.3.6"
coverage = "<8"
pytest-asyncio = "^0.23.7"
mypy = "^1.10.1"
pytest-kubernetes = "^0.3.0"
docker = "^7.0.0"
coveralls = "^4.0.1"
types-requests = "^2.32.0.20240622"
pytest-retry = "^1.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
log_cli = true
log_cli_level = "INFO"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
addopts = """
	-x
	--strict-markers
	--doctest-modules
	--tb=short
"""
testpaths = "tests"
pythonpath = "operator"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.coverage.run]
branch = true
omit = [
	"gefyra/healthcheck.py"
]

[tool.mypy]
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
exclude = [
	"tests"
]
