[tool.poetry]
name = "Gefyra Operator"
version = "2.4.0"
description = "Gefyra Operator runs all cluster-side components of Gefyra's Kubernetes-based development system"
authors = ["Michael Schilonka <michael@blueshoe.io>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.7,<3.14"
kopf = "^1.44.5"
kubernetes = "^35.0.0"
python-decouple = "^3.8"
python-statemachine = "^3.0.0"
pydantic = "^2.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
coverage = "<8"
pytest-asyncio = "^1.3.0"
mypy = "^1.20.0"
pytest-kubernetes = "^0.7.2"
docker = "^7.0.0"
coveralls = "^4.0.1"
types-requests = "^2.33.0.20260402"
pytest-retry = "^1.7.0"
factory-boy = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
log_cli = true
log_cli_level = "INFO"
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
addopts = """
	-x
	--strict-markers
	--doctest-modules
	--tb=short
"""
testpaths = "tests"
pythonpath = "operator"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = [
	"gefyra/healthcheck.py"
]

[tool.mypy]
warn_return_any = false
warn_unused_configs = false
ignore_missing_imports = true
exclude = [
	"tests"
]
